<resources>
    <string name="app_name">BackgroundTask</string>
    <string name="menu_heading">Main Background Task Menu</string>
    <string name="task_with_thread">Task with Thread</string>
    <string name="power_receiver">Power Receiver</string>
    <string name="async_task_loader">Async Task Loader</string>
    <string name="async_task">Async Task</string>
    <string name="loading">Loading...</string>
    <string name="no_result_found">no result found</string>
    <string name="enter_book_name">Enter book name</string>
    <string name="book_title">Book title</string>
    <string name="search_book">Search Book</string>
    <string name="check_power">Check Power</string>


</resources>
